# sonarcloud-cpp-minimal

./: .gitignore  CLAUDE.md  CMakeLists.txt  HANDOFF.md  INVESTIGATION_RESULTS.md  NEXT_AGENT_QUICKSTART.md  README.md  SETUP.md  pixi.toml  sonar-project.properties
.claude/: NEXT_AGENT.md  claude.md  coverage-guide.md
.claude/agents/: code-reviewer.md  coder.md  project-manager.md  test-runner.md
.github/workflows/: coverage.yml
docs/: PHASE_0_EXAMPLES.md
lib/examples/trivial_math/: CMakeLists.txt
lib/examples/trivial_math/include/: trivial_math.h
lib/examples/trivial_math/src/: trivial_math.cpp
lib/examples/trivial_math/test/: test_trivial_math.cpp
projects/examples/blink_led/: CMakeLists.txt  README.md
projects/examples/blink_led/arduino/: blink_led.ino
projects/examples/blink_led/lib/include/: blink_controller.h  console_simulator.h
projects/examples/blink_led/lib/src/: blink_controller.cpp
projects/examples/blink_led/src/: main.cpp
projects/examples/blink_led/test/: mock_hardware.h  test_blink_controller.cpp  test_console_simulator.cpp
test/: test_math.cpp
tools/: MCP_INVESTIGATION.md  README.md  ci_check.py  sonarcloud_check.py  status.py
